--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - images/excel.png
+    - images/word.png
+    - images/outlook.png
+    - images/libreO_Base.png
+    - images/libreO_calc.png
+    - images/libreO_writer.png
+    - images/usa_flag.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
